--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express-session": "^1.17.0",
     "handlebars": "^4.7.3",
     "method-override": "^3.0.0",
-    "mongoose": "^5.9.3"
+    "mongoose": "^5.9.3",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
